Add currency, fix API conventions
